[package]
name = "lib_tfidf_hulth_test"
version = "0.1.0"
authors = ["Fred Lahde <frederick.lahde@worldiety.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.106"
serde_json = "1.0.51"
serde_derive = "1.0.106"
lib_tfidf = { path = "../lib_tfidf" }